--- a/C18 Ex01 Levi 205695133 Nofar 204032031/MainForm/FacebookApp.csproj
+++ b/C18 Ex01 Levi 205695133 Nofar 204032031/MainForm/FacebookApp.csproj
@@ -52,11 +52,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Feed.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Feed.Designer.cs">
+      <DependentUpon>Feed.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListWithPictureBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ListWithPictureBox.Designer.cs">
       <DependentUpon>ListWithPictureBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RegularPost.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RegularPost.Designer.cs">
+      <DependentUpon>RegularPost.cs</DependentUpon>
     </Compile>
     <Compile Include="UserLogic.cs" />
     <Compile Include="MainForm.cs">
@@ -68,6 +80,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
+    <EmbeddedResource Include="Feed.resx">
+      <DependentUpon>Feed.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ListWithPictureBox.resx">
       <DependentUpon>ListWithPictureBox.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +99,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RegularPost.resx">
+      <DependentUpon>RegularPost.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
