--- a/C18 Ex01 Levi 205695133 Nofar 204032031/MainForm/FacebookApp.csproj
+++ b/C18 Ex01 Levi 205695133 Nofar 204032031/MainForm/FacebookApp.csproj
@@ -34,11 +34,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Facebook">
-      <HintPath>..\..\..\..\..\Downloads\01_FB01_BasicFacebookFeatures.V6.8.0.14\FBApi\Facebook.dll</HintPath>
+    <Reference Include="Facebook, Version=6.0.10.0, Culture=neutral, PublicKeyToken=58cb4f2111d1e6de, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\FBApi\Facebook.dll</HintPath>
     </Reference>
-    <Reference Include="FbGraphApiWrapper">
-      <HintPath>..\..\..\..\..\Downloads\01_FB01_BasicFacebookFeatures.V6.8.0.14\FBApi\FbGraphApiWrapper.dll</HintPath>
+    <Reference Include="FbGraphApiWrapper, Version=6.8.0.14, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\FBApi\FbGraphApiWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,13 +60,26 @@
     <Compile Include="CommonPages.cs" />
     <Compile Include="CommonPosts.cs" />
     <Compile Include="CommonProp.cs" />
+    <Compile Include="EventsListBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EventsListBox.Designer.cs">
+      <DependentUpon>EventsListBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Feed.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Feed.Designer.cs">
       <DependentUpon>Feed.cs</DependentUpon>
     </Compile>
+    <Compile Include="FriendsListBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FriendsListBox.Designer.cs">
+      <DependentUpon>FriendsListBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="ICommonProps.cs" />
+    <Compile Include="IListBoxable.cs" />
     <Compile Include="ListWithPictureBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -93,8 +108,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
+    <EmbeddedResource Include="EventsListBox.resx">
+      <DependentUpon>EventsListBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Feed.resx">
       <DependentUpon>Feed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FriendsListBox.resx">
+      <DependentUpon>FriendsListBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ListWithPictureBox.resx">
       <DependentUpon>ListWithPictureBox.cs</DependentUpon>
